--- a/centos/rebalance/addServer.yml
+++ b/centos/rebalance/addServer.yml
@@ -10,17 +10,8 @@
     --server-add={{  server_add.ansible_host }}:{{ couchbase_server_admin_port }} \
     --server-add-username={{ couchbase_server_admin }} --server-add-password={{ couchbase_server_password }} \
     --services={{ services }}
-  when: cb_major_version['stdout'] == "4" and  not services | search("index")
- 
-- name: Join additional cluster nodes
-  shell: > 
-    {{ couchbase_server_bin_path }}/couchbase-cli server-add -c {{ master_with_port }} \
-    --user={{ couchbase_server_admin }} --password={{ couchbase_server_password }} \
-    --server-add={{  server_add.ansible_host }}:{{ couchbase_server_admin_port }} \
-    --server-add-username={{ couchbase_server_admin }} --server-add-password={{ couchbase_server_password }} \
-    --services={{ services }} --index-storage-setting={{ couchbase_indexer_type }}
-  when: cb_major_version['stdout'] == "4" and services | search("index")
-  
+  when: cb_major_version['stdout'] == "4"
+    
 - name: Join additional cluster nodes
   shell: >
     {{ couchbase_server_bin_path }}/couchbase-cli server-add -c {{ master_with_port }} \
@@ -28,13 +19,5 @@
     --server-add={{ server_add.ansible_host }}:{{ couchbase_server_admin_port }} \ 
     --server-add-username={{ couchbase_server_admin }} --server-add-password={{ couchbase_server_password }} \
     --services={{ services }}
-  when: cb_major_version['stdout'] == "5" and  not services | search("index")
-  
-- name: Join additional cluster nodes
-  shell: >
-    {{ couchbase_server_bin_path }}/couchbase-cli server-add -c {{ master_with_port }} \
-    --user={{ couchbase_server_admin }} --password={{ couchbase_server_password }} \
-    --server-add={{ server_add.ansible_host }}:{{ couchbase_server_admin_port }} \ 
-    --server-add-username={{ couchbase_server_admin }} --server-add-password={{ couchbase_server_password }} \
-    --services={{ services }} --index-storage-setting={{ couchbase_indexer_type }}
-  when: cb_major_version['stdout'] == "5" and services | search("index")
+  when: cb_major_version['stdout'] == "5"
+ 
