--- a/centos/upgrade/onlineUpgradeClusterByFreshInstall.yml
+++ b/centos/upgrade/onlineUpgradeClusterByFreshInstall.yml
@@ -1,20 +1,28 @@
 ---
-- hosts: "{{ node }}"
+- hosts: "{{ group | default('centos') }}[{{ start | int}}:{{ end | int}}]"
+  serial: 1
   vars_files:
     - ../CouchbaseConstants.yml
   vars:
     start: "{{ start }}"
     end: "{{ end }}"
     original_swap_node: "{{ hostvars[groups['centosupgradenode'][0]] }}"
-    current_swap_server: "{{ original_swap_node }}"
+    ver_no: "{{VER|default('4.5.0')}}"
+    build_no:  "{{BUILD_NO|default(2601)}}"
+    flavor:  "{{FLAVOR|default('watson')}}"
+    base_url:  http://172.23.120.24/builds/latestbuilds/couchbase-server/{{flavor}}/
+    build_pkg: "couchbase-server-enterprise-{{ver_no}}-{{build_no}}-centos6.x86_64.rpm"
+    url_var: "{{base_url}}/{{build_no}}/{{build_pkg}}"
+    build_url: "{{URL|default(url_var)}}"
+    rpm_path: "/tmp/couchbase.rpm"
   tasks:    
+    - name: Set current swap server once
+      set_fact: current_swap_server="{{ original_swap_node }}"
+      delegate_to: 127.0.0.1
+      delegate_facts: True
+      when: hostvars['localhost'].current_swap_server is not defined 
+      
     - name: Upgrade each node in cluster 
       include: upgradeSingleNodeByFreshInstall.yml
       vars:
-        swap_out_node: "{{ hostvars[item] }}"
-        ver: "{{ ver | default('5.0.0') }}"
-        build_no: "{{ build_no | default('3358' }}"
-        flavor: "{{ flavor | default('spock')"
-      with_items: "{{ groups['centos'][start | int:end | int] }}"
-     
-  
+        swap_out_node: "{{ hostvars[inventory_hostname] }}"
