--- a/centos/testConstants.ini
+++ b/centos/testConstants.ini
@@ -5,4 +5,10 @@ initial_flavor=watson
 upgrade_version=5.0.0
 upgrade_build_no=3358
 upgrade_flavor=spock
-node_init=3
+node_init=5
+[loadgenerator]
+initial_loadgen=/tmp/loadgen/loadgenproperties.json
+loadgen_jar_location=/Users/bharathgp/eclipse-workspace/travelsampleloadgen/target/
+loadgen_jar=TravelSampleLoadGenerator.jar
+loadgen_sample_data=TravelSampleData.json
+update_loadgen=/tmp/loadgen/loadgenpropertiesUpdates.json
