Fixed a reference to file in upgradeSingleNode.yml

--- a/centos/upgrade/upgradeSingleNodeByFreshInstall.yml
+++ b/centos/upgrade/upgradeSingleNodeByFreshInstall.yml
@@ -12,4 +12,4 @@
   include: ../install/uninstallTasks.yml
 
 - name: Install new version of couchbase
-  include: ../install/installtasks.yml
+  include: ../install/installTasks.yml
