changes From the slave

--- a/centos/indexes.yml
+++ b/centos/indexes.yml
@@ -1,11 +1,34 @@
 indexes:
-- "CREATE INDEX `def_airportname` ON `travel-sample`(`airportname`) WITH { \"defer_build\":true }"
-- "CREATE INDEX `def_city` ON `travel-sample`(`city`) WITH { \"defer_build\":true }"
-- "CREATE INDEX `def_faa` ON `travel-sample`(`faa`) WITH { \"defer_build\":true }"
-- "CREATE INDEX `def_icao` ON `travel-sample`(`icao`) WITH { \"defer_build\":true }"
-- "CREATE INDEX `def_name_type` ON `travel-sample`(`name`) WHERE (`_type` = \"User\") WITH { \"defer_build\":true }"
-- "CREATE PRIMARY INDEX `def_primary` ON `travel-sample` WITH { \"defer_build\":true }"
-- "CREATE PRIMARY INDEX `def_primary` ON `travel-sample` WITH { \"defer_build\":true }"
-- "CREATE INDEX `def_schedule_utc` ON `travel-sample`(array (`s`.`utc`) for `s` in `schedule` end) WITH { \"defer_build\":true }"
-- "CREATE INDEX `def_sourceairport` ON `travel-sample`(`sourceairport`) WITH { \"defer_build\":true }"
-- "CREATE INDEX `def_type` ON `travel-sample`(`type`) WITH { \"defer_build\":true }"
+- "CREATE INDEX `def_airportname` ON `travel-sample`(`airportname`) WITH { \"defer_build\":true, \"nodes\":[\"172.23.121.215:8091\"] }"
+- "CREATE INDEX `def_city` ON `travel-sample`(`city`) WITH { \"defer_build\":true, \"nodes\":[\"172.23.121.215:8091\"] }"
+- "CREATE INDEX `def_faa` ON `travel-sample`(`faa`) WITH { \"defer_build\":true, \"nodes\":[\"172.23.121.215:8091\"] }"
+- "CREATE INDEX `def_icao` ON `travel-sample`(`icao`) WITH { \"defer_build\":true, \"nodes\":[\"172.23.121.215:8091\"] }"
+- "CREATE INDEX `def_name_type` ON `travel-sample`(`name`) WHERE (`_type` = \"User\") WITH { \"defer_build\":true, \"nodes\":[\"172.23.121.215:8091\"] }"
+- "CREATE PRIMARY INDEX `def_primary` ON `travel-sample` WITH { \"defer_build\":true, \"nodes\":[\"172.23.121.215:8091\"] }"
+- "CREATE INDEX `def_schedule_utc` ON `travel-sample`(array (`s`.`utc`) for `s` in `schedule` end) WITH { \"defer_build\":true, \"nodes\":[\"172.23.121.215:8091\"] }"
+- "CREATE INDEX `def_sourceairport` ON `travel-sample`(`sourceairport`) WITH { \"defer_build\":true, \"nodes\":[\"172.23.121.215:8091\"] }"
+- "CREATE INDEX `def_type` ON `travel-sample`(`type`) WITH { \"defer_build\":true, \"nodes\":[\"172.23.121.215:8091\"] }"
+- "CREATE INDEX `def_airline_id` ON `travel-sample`(`id`) WHERE (`type` = \"airline\") WITH { \"defer_build\":true, \"nodes\":[\"172.23.121.215:8091\"] }"
+- "CREATE INDEX `def_airport_id` ON `travel-sample`(`id`) WHERE (`type` = \"airport\") WITH { \"defer_build\":true, \"nodes\":[\"172.23.121.215:8091\"] }"
+- "CREATE INDEX `def_route_id` ON `travel-sample`(`id`) WHERE (`type` = \"route\") WITH { \"defer_build\":true, \"nodes\":[\"172.23.121.215:8091\"] }"
+- "CREATE INDEX `def_airline_id2` ON `travel-sample`(`id`) WHERE (`type` = \"airline\") WITH { \"defer_build\":true, \"nodes\":[\"172.23.107.118:8091\"] }"
+- "CREATE INDEX `def_airport_id2` ON `travel-sample`(`id`) WHERE (`type` = \"airport\") WITH { \"defer_build\":true, \"nodes\":[\"172.23.107.118:8091\"] }"
+- "CREATE INDEX `def_route_id2` ON `travel-sample`(`id`) WHERE (`type` = \"route\") WITH { \"defer_build\":true, \"nodes\":[\"172.23.107.118:8091\"] }"
+- "CREATE INDEX `def_airportname2` ON `travel-sample`(`airportname`) WITH { \"defer_build\":true, \"nodes\":[\"172.23.107.118:8091\"] }"
+- "CREATE INDEX `def_city2` ON `travel-sample`(`city`) WITH { \"defer_build\":true, \"nodes\":[\"172.23.107.118:8091\"] }"
+- "CREATE INDEX `def_faa2` ON `travel-sample`(`faa`) WITH { \"defer_build\":true, \"nodes\":[\"172.23.107.118:8091\"] }"
+- "CREATE INDEX `def_icao2` ON `travel-sample`(`icao`) WITH { \"defer_build\":true, \"nodes\":[\"172.23.107.118:8091\"] }"
+- "CREATE INDEX `def_name_type2` ON `travel-sample`(`name`) WHERE (`_type` = \"User\") WITH { \"defer_build\":true, \"nodes\":[\"172.23.107.118:8091\"] }"
+- "CREATE PRIMARY INDEX `def_primary2` ON `travel-sample` WITH { \"defer_build\":true, \"nodes\":[\"172.23.107.118:8091\"] }"
+- "CREATE INDEX `def_schedule_utc2` ON `travel-sample`(array (`s`.`utc`) for `s` in `schedule` end) WITH { \"defer_build\":true, \"nodes\":[\"172.23.107.118:8091\"] }"
+- "CREATE INDEX `def_sourceairport2` ON `travel-sample`(`sourceairport`) WITH { \"defer_build\":true, \"nodes\":[\"172.23.107.118:8091\"] }"
+- "CREATE INDEX `def_type2` ON `travel-sample`(`type`) WITH { \"defer_build\":true, \"nodes\":[\"172.23.107.118:8091\"] }"
+#- "CREATE INDEX `def_airportname3` ON `travel-sample`(`airportname`) WITH { \"defer_build\":true, \"nodes\":[\"172.23.121.213:8091\"] }"
+#- "CREATE INDEX `def_city3` ON `travel-sample`(`city`) WITH { \"defer_build\":true, \"nodes\":[\"172.23.121.213:8091\"] }"
+#- "CREATE INDEX `def_faa3` ON `travel-sample`(`faa`) WITH { \"defer_build\":true, \"nodes\":[\"172.23.121.213:8091\"] }"
+#- "CREATE INDEX `def_icao3` ON `travel-sample`(`icao`) WITH { \"defer_build\":true, \"nodes\":[\"172.23.121.213:8091\"] }"
+#- "CREATE INDEX `def_name_type3` ON `travel-sample`(`name`) WHERE (`_type` = \"User\") WITH { \"defer_build\":true, \"nodes\":[\"172.23.121.213:8091\"] }"
+#- "CREATE PRIMARY INDEX `def_primary3` ON `travel-sample` WITH { \"defer_build\":true, \"nodes\":[\"172.23.121.213:8091\"] }"
+#- "CREATE INDEX `def_schedule_utc3` ON `travel-sample`(array (`s`.`utc`) for `s` in `schedule` end) WITH { \"defer_build\":true, \"nodes\":[\"172.23.121.213:8091\"] }"
+#- "CREATE INDEX `def_sourceairport3` ON `travel-sample`(`sourceairport`) WITH { \"defer_build\":true, \"nodes\":[\"172.23.121.213:8091\"] }"
+#- "CREATE INDEX `def_type3` ON `travel-sample`(`type`) WITH { \"defer_build\":true, \"nodes\":[\"172.23.121.213:8091\"] }"
