--- a/centos/testConstants.ini
+++ b/centos/testConstants.ini
@@ -5,10 +5,13 @@ initial_flavor=watson
 upgrade_version=5.0.0
 upgrade_build_no=3358
 upgrade_flavor=spock
-node_init=5
+node_init=6
 [loadgenerator]
-initial_loadgen=/tmp/loadgen/loadgenproperties.json
-loadgen_jar_location=/Users/bharathgp/eclipse-workspace/travelsampleloadgen/target/
+initial_loadgen=/tmp/loadgen/loadgen_initial_properties.json
+loadgen_jar_location=/root/applicationUpgrade/travelsampleloadgen/target/
 loadgen_jar=TravelSampleLoadGenerator.jar
+updated_loadgen_jar=TravelSampleLoadGenerator2.0.jar
 loadgen_sample_data=TravelSampleData.json
-update_loadgen=/tmp/loadgen/loadgenpropertiesUpdates.json
+update_loadgen=/tmp/loadgen/loadgen_update_properties.json
+updated_loadgen=/tmp/loadgen/loadgen_updated_properties.json
+
